--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.14",
+    "aos": "^2.3.4",
     "axios": "^1.8.3",
+    "dotenv": "^16.4.7",
     "framer-motion": "^12.5.0",
+    "process": "^0.11.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.4.0",
     "recharts": "^2.15.1",
     "tailwindcss": "^4.0.14"
   },
