--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -3,4 +3,4 @@ services:
     name: flask-app
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn -w 4 -b 0.0.0.0:$PORT app:"create_app()"
+    startCommand: gunicorn app:"create_app()"
