--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -3,4 +3,4 @@ services:
     name: flask-app
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn app:"create_app()"
+    startCommand: uvicorn app.main:app --host 0.0.0.0 --port $PORT
