--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,4 @@
-flask==2.3.2
-flask-cors==4.0.0
+# This file is used to install the required packages for the backend.
 spacy==3.6.1
 numpy==1.24.3
 pandas==2.0.2
@@ -14,3 +13,5 @@ transformers>=4.30.0
 google-generativeai>=0.3.0
 tenacity==8.0.1
 gunicorn
+fastapi==0.95.2
+uvicorn==0.22.0
