--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,17 +1,99 @@
-# This file is used to install the required packages for the backend.
-flask==2.3.2
-flask-cors==4.0.0
-spacy==3.6.1
+annotated-types==0.7.0
+anyio==4.8.0
+async-timeout==5.0.1
+blinker==1.9.0
+blis==0.7.11
+cachetools==5.5.2
+catalogue==2.0.10
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+confection==0.1.5
+cymem==2.0.11
+dataclasses==0.6
+distro==1.9.0
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.6.0/en_core_web_sm-3.6.0-py3-none-any.whl#sha256=83276fc78a70045627144786b52e1f2728ad5e29e5e43916ec37ea9c26a11212
+exceptiongroup==1.2.2
+fasttext-wheel==0.9.2
+filelock==3.18.0
+Flask==2.3.2
+Flask-Cors==4.0.0
+fsspec==2025.3.0
+gensim==4.3.3
+google-ai-generativelanguage==0.6.15
+google-api-core==2.24.2
+google-api-python-client==2.165.0
+google-auth==2.38.0
+google-auth-httplib2==0.2.0
+google-generativeai==0.8.4
+googleapis-common-protos==1.69.2
+grpcio==1.71.0
+grpcio-status==1.71.0
+gunicorn==21.2.0
+h11==0.14.0
+httpcore==1.0.7
+httplib2==0.22.0
+httpx==0.28.1
+huggingface-hub==0.29.3
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
+jiter==0.9.0
+joblib==1.4.2
+langcodes==3.5.0
+language_data==1.3.0
+marisa-trie==1.2.1
+MarkupSafe==3.0.2
+mpmath==1.3.0
+murmurhash==1.0.12
+networkx==3.4.2
 numpy==1.24.3
+packaging==24.2
 pandas==2.0.2
-scikit-learn==1.2.2
-requests==2.31.0
-torch
-torchtext
-joblib>=1.0.1
+pathlib_abc==0.1.1
+pathy==0.11.0
+preshed==3.0.9
+proto-plus==1.26.1
+protobuf==5.29.4
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pybind11==2.13.6
+pydantic==1.10.21
+pydantic_core==2.27.2
+pyparsing==3.2.1
+python-dateutil==2.9.0.post0
 python-dotenv==0.19.0
-redis>=3.5.3
-transformers>=4.30.0
-google-generativeai>=0.3.0
+pytz==2025.1
+PyYAML==6.0.2
+redis==5.2.1
+regex==2024.11.6
+requests==2.31.0
+rsa==4.9
+safetensors==0.5.3
+scikit-learn==1.2.2
+scipy==1.13.1
+six==1.17.0
+smart-open==6.4.0
+sniffio==1.3.1
+spacy==3.6.1
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.5.1
+starlette==0.27.0
+sympy==1.13.1
 tenacity==8.0.1
-gunicorn
+thinc==8.1.12
+threadpoolctl==3.6.0
+tokenizers==0.21.1
+torch==2.6.0
+torchtext==0.18.0
+tqdm==4.67.1
+transformers==4.50.1
+typer==0.9.4
+typing_extensions==4.12.2
+tzdata==2025.1
+uritemplate==4.1.1
+urllib3==2.3.0
+wasabi==1.1.3
+Werkzeug==3.1.3
