--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,22 @@
+# Web Framework and Extensions
 Flask==2.3.2
 Flask-Cors==4.0.0
 gunicorn==21.2.0
+python-dotenv==0.19.0
+
+# Data Processing
 numpy==1.24.3
 pandas==2.0.2
-python-dotenv==0.19.0
 scikit-learn==1.2.2
+
+# NLP and Machine Learning
 spacy==3.6.1
+transformers==4.30.0
+torch==2.0.1
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.6.0/en_core_web_sm-3.6.0-py3-none-any.whl
+
+# HTTP and API
 requests==2.31.0
+
+# Logging and Monitoring
+logging==0.4.9.6
